[tool.poetry]
name = "django-orm-watching-storage"
version = "0.1.1"
description = "Devman course about django ORM"
authors = ["Sol Entropax Maxwell <cainmax@posteo.mx>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2017.2"
django = "1.11.*"
psycopg2-binary = "2.8.*"
environs = "*"

[tool.poetry.dev-dependencies]
pytz = "2017.2"
django = "1.11.*"
psycopg2-binary = "2.8.*"
environs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
